--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     integrity="sha512-XWTTruHZEYJsxV3W/lSXG1n3Q39YIWOstqvmFsdNEEQfHoZ6vm6E9GK2OrF6DSJSpIbRbi+Nn0WDPID9O7xB2Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.2.0/css/all.min.css">
 
   <link rel="stylesheet" href="./css/style.css">
 
@@ -81,15 +81,15 @@
 
             <div class="carousel-item text-center active">
 
-              <img src="./img/img1.png"  class="img-fluid" alt="sorvete">
+              <img src="./img/img1.png" class="d-block img-fluid" alt="sorvete">
             </div>
 
             <div class="carousel-item text-center">
-              <img src="./img/img2.png"  class="img-fluid" alt="sorvete2">
+              <img src="./img/img2.png" class="d-block img-fluid" alt="sorvete2">
             </div>
 
             <div class="carousel-item text-center">
-              <img src="./img/img3.png"  class="img-fluid"  alt="sorvete3">
+              <img src="./img/img3.png" class="d-block img-fluid" alt="sorvete3">
             </div>
 
           </div>
@@ -106,15 +106,16 @@
 
     <div class="container">
 
-      <div class="mud justify-content-center">
+      <div class="justify-content-center">
 
         <div class="algo">
-          <p>Aqui deveria ter alguma coisa sobre a empresa comercial.. </p>
+          <p>Aqui deveria ter alguma coisa importante sobre a empresa comercial.. É uma pena que minha criatividade
+            simplesmente deixou de existir para escrever algo. </p>
         </div>
-        
+
       </div>
 
-      
+
 
     </div>
   </main>
@@ -145,18 +146,16 @@
 
         <ul class="nav justify-content-center pb-6">
 
-          <i class="icofont-instagram pe-1">
-            <img src="./img/instagram.svg" alt="instagram">
-          </i>
-          <i class="icofont-facebook pe-1">
-            <img src="./img/facebook.svg" alt="instagram">
-          </i>
-          <i class="icofont-youtube pe-1">
-            <img src="./img/youtube.svg" alt="instagram">
-          </i>
-          <i class="icofont-x pe-1">
-            <img src="./img/twitter-x.svg" alt="instagram">
-          </i>
+          <a href="#"> <i class="fab fa-instagram text-black pe-1"> </i></a>
+
+          <a href="#"> <i class="fab fa-facebook text-black pe-1">
+            </i></a>
+          <a href="#"><i class="fab fa-youtube text-black pe-1">
+            </i></a>
+
+          <a href="#"><i class="fab fa-twitter text-black pe-1">
+            </i></a>
+
         </ul>
 
         <p id="txt" class="text-center text-muted">© 2021 Company, Inc</p>
@@ -166,9 +165,6 @@
     </div>
 
   </div>
-
-
-
 
 
 
